fix size on ie8-9

--- a/templates/green_bootstrap.css
+++ b/templates/green_bootstrap.css
@@ -179,8 +179,8 @@ table.borderless td, table.borderless th, table.noborderattop tr:first-child td,
     height: 16px;    
 }
 
-.container {
-    padding: 0;
+.row {
+    width:auto;
 }
 
 .table thead th {
